# Linconym

./: .gitignore  Compilation.md  FUNDING.yml  NOTICE.txt  PRIVACY.txt  README.md  Rules.md  Todo.md  buildozer.spec  console_version.py  data.json  main.kv  main.py  musics_choice.md  prompts.md  pyproject.toml  requirements.txt  requirements_dev.txt  test_game.py
.github/workflows/: pylint.yml
licenses/: Licenses.md  check-icons.txt  coins-icons.txt  credits.json  home-button-icons.txt  magic-wand-icons.txt  musical-note-icons.txt  paint-icon.txt  settings-icons.txt  star-icons.txt
resources/: achievements.json  customization.json  gameplay.json  palettes.json  quests.json  themes.json  tutorial.json  user_status.json
resources/dictionnaries/: english_words_10k.txt  english_words_34k.txt  english_words_88k.txt
screens/: __init__.py  achievements.kv  achievements.py  badges.kv  badges.py  boosters.kv  boosters.py  classic_mode.kv  classic_mode.py  configure_tree.kv  configure_tree.py  credits.kv  credits.py  customization.kv  customization.py  free_mode.kv  free_mode.py  game.kv  game.py  home.kv  home.py  levels.kv  levels.py  musics.kv  musics.py  opening.py  preview.kv  preview.py  profile.kv  profile.py  quests.kv  quests.py  settings.kv  settings.py  themes.kv  themes.py
screens/custom_widgets/: __init__.py  achievements_layout.py  act_button.kv  act_button.py  booster_layout.kv  booster_layout.py  bottom_bar.kv  bottom_bar.py  buy_button.kv  buy_button.py  (+56 more)
tools/: __init__.py  constants.py  data.json  generate_texture.py  linconym.py  path.py
(+43 files in other folders)
